--- a/guia-1/calculadora/Calculadora.html
+++ b/guia-1/calculadora/Calculadora.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculadora Básica</title>
-    <link rel="stylesheet" href="./CSS/StyleCalculadora.css">
+    <link rel="stylesheet" href="./css/StyleCalculadora.css">
 </head>
 
 <body>
@@ -13,6 +13,6 @@
         <div id="resultado"></div>
     </center>
 </body>
-<script src="./JS/Calculadora.js"></script>
+<script src="./js/Calculadora.js"></script>
 
 </html>
